# DuckyEngine

./: CMakeLists.txt  README.md  main.cpp  motivation.txt
ImGuizmo/: ImGuizmo.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
src/core/camera/: Camera.cpp  Camera.hpp
src/core/filesystem/: ProjectBrowser.cpp  ProjectBrowser.hpp
src/core/gui/: Console.cpp  Console.hpp  GuiLayer.cpp  GuiLayer.hpp
src/core/math/: Mat4.hpp  MatrixTransform.cpp  MatrixTransform.hpp  Vec3.hpp  Vec4.hpp
src/core/menubar/: MenuBar.cpp  MenuBar.hpp
src/core/renderer/: Renderer.cpp  Renderer.hpp
src/core/sceneobject/: SceneObject.cpp  SceneObject.hpp
src/core/textureloader/: TextureLoader.cpp  TextureLoader.hpp
src/core/viewport/: Viewport.cpp  Viewport.hpp
src/core/window/: Window.cpp  Window.hpp
